--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
     <!-- prices -->
     <div class="area" style="margin-bottom: 24px; margin-top: 64px;">
-      <img src="images/menu.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
+      <img src="images/menu2.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜メニュー〜</p>
     </div>
     <div class="area" style="margin-bottom: 48px;">
@@ -299,11 +299,13 @@
     <div class="modal-frame" id="plan-simple">
       <div class="modal-content">
         <img src="images/button-plus.svg" class="button-hide">
+        <div>aaaa</div>
+        <div>aaaa</div>
       </div>
     </div>
     <!-- contact -->
     <div id="contact" class="area" style="margin-bottom: 24px; margin-top: 64px;" id="contact">
-      <img src="images/contact.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
+      <img src="images/contact2.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
       <img src="images/goma.svg" class="inview-appear is-disappear shake" style="width: 40%; position: absolute; bottom: 0; left: -10%;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜お問い合わせ〜</p>
     </div>
