--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
       </div>
       <img src="images/bg-title.svg" class="palette-re" style="animation: rotate-anim 15s linear infinite reverse; pointer-events: none;">
       <div class="palette" style="animation: rotate-anim 20s linear infinite;">
-        <button id="bg-1" class="bg-button" style="background-image: url('images/bg-water.svg'); transform: translate(-50%, 80%);"></button>
-        <button id="bg-2" class="bg-button" style="background-image: url('images/bg-green.svg'); transform: translate(-50%, -180%);"></button>
-        <button id="bg-3" class="bg-button" style="background-image: url('images/bg-pink.svg'); transform: translate(60%, 15%);"></button>
-        <button id="bg-4" class="bg-button" style="background-image: url('images/bg-blue.svg'); transform: translate(60%, -115%);"></button>
-        <button id="bg-5" class="bg-button" style="background-image: url('images/bg-salmon.svg'); transform: translate(-160%, -115%);"></button>
-        <button id="bg-6" class="bg-button" style="background-image: url('images/bg-yellow.svg'); transform: translate(-160%, 15%);"></button>
+        <div id="bg-1" class="bg-button" style="background-image: url('images/bg-water.svg'); transform: translate(-50%, 80%);"></div>
+        <div id="bg-2" class="bg-button" style="background-image: url('images/bg-green.svg'); transform: translate(-50%, -180%);"></div>
+        <div id="bg-3" class="bg-button" style="background-image: url('images/bg-pink.svg'); transform: translate(60%, 15%);"></div>
+        <div id="bg-4" class="bg-button" style="background-image: url('images/bg-blue.svg'); transform: translate(60%, -115%);"></div>
+        <div id="bg-5" class="bg-button" style="background-image: url('images/bg-salmon.svg'); transform: translate(-160%, -115%);"></div>
+        <div id="bg-6" class="bg-button" style="background-image: url('images/bg-yellow.svg'); transform: translate(-160%, 15%);"></div>
       </div>
       <img src="images/ink.svg" class="inview-appear is-disappear" style="width: 40%; max-width: 300px; position: absolute; bottom: -30%; right: 0;">
     </div>
     <!-- about_us -->
     <div class="area" style="margin-bottom: 24px; margin-top: 64px;">
-      <img src="images/about-us.svg" class="is-disappear subtitle" id="about-us">
-      <img src="images/rakko.svg" class="inview-rakko" style="width: 50%; position: absolute; top: -90px; left: -50%;">
+      <img src="images/about-us3.svg" class="is-disappear subtitle" id="about-us">
+      <img src="images/rakko.svg" class="inview-rakko" style="width: 50%; position: absolute; top: -60px; left: -50%;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜ムギックスについて〜</p>
     </div>
     <img src="images/bee.svg" id="bee" style="width: 25%; position: absolute; z-index: 10;">
@@ -127,17 +127,12 @@
         そんな時はお任せ下さい！<br>シンプルで見やすいホームページでもオシャレなホームページでも皆さんのご要望を叶えます<br>
       </div>
     </div>
-    <div style="margin-left: 5%;">ムービー</div>
-    <video style="width: 90%; margin: 16px 5%; border-radius: 16px; border: 5px double black;" autoplay loop>
-      <source src="movies/footprint.mp4" type="video/mp4">
-    </video>
-    <div style="margin-left: 5%;">ミニゲーム</div>
     <div class="area-horizon" style="width: 90%; height: 200px; margin: 16px 5%;">
       <div style="display: flex; flex-wrap: wrap; width: 50%;">
-        <div class="game-frame"><div class="game-button" id="ann-game1"></div></div>
-        <div class="game-frame"><div class="game-button" id="ann-game2"></div></div>
-        <div class="game-frame"><div class="game-button" id="ann-game3"></div></div>
-        <div class="game-frame"><div class="game-button" id="ann-game4"></div></div>
+        <div class="game-frame"><div class="game-button" id="ann-game1">P</div></div>
+        <div class="game-frame"><div class="game-button" id="ann-game2">U</div></div>
+        <div class="game-frame"><div class="game-button" id="ann-game3">S</div></div>
+        <div class="game-frame"><div class="game-button" id="ann-game4">H</div></div>
       </div>
       <div style="position: relative; width: 50%;">
         <img src="images/nice-anchan.svg" id="annchan" style="width: 100%; max-width: 300px; position: absolute; bottom: -20%; right: -120%; transition: 1s;">
@@ -148,7 +143,7 @@
       <div class="bird-slider">
         <img src="images/bird.svg" style="position: absolute; width: 80%; top: 50%; left: 50%; z-index: 35;">
       </div>
-      <img src="images/workflow.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
+      <img src="images/workflow3.svg" class="inview-appear is-disappear subtitle" style="width: 80%; margin: 0 auto; display: block;">
       <p style="text-align: center; transform: translate(0, -30px);" class="inview-appear is-disappear">〜完成までの流れ〜</p>
     </div>
     <!-- meeting -->
@@ -250,7 +245,7 @@
         詳しい内容はメニューをタッチして詳細をご覧ください<br>
       </div>
     </div>
-    <div class="area" style="text-align: center; font-size: 2em; font-weight: bold;">
+    <div class="menu-title">
       BASIC PLAN
     </div>
     <div class="plan-slider">
@@ -275,7 +270,7 @@
         <div style="text-align: center; margin-top: 8px; font-size: 4vw;"><a href="#contact" class="button">詳しくはこちら</a></div>
       </div>
     </div>
-    <div class="area" style="text-align: center; font-size: 2em; font-weight: bold;">
+    <div class="menu-title">
       OPTION
     </div>
     <div class="option-slider">
