--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       </div>
       <div class="plan">
         <img src="images/goma.svg" class="plan-top">
-        <div class="plan-title">カスタム</div>
+        <div class="plan-title">オリジナル</div>
         <div class="plan-title">¥100,000〜</div>
         <div style="text-align: center; margin-top: 8px; font-size: 4vw;"><a href="#contact" class="button">詳しくはこちら</a></div>
       </div>
