--- a/index.html
+++ b/index.html
@@ -8,19 +8,9 @@
   <link rel="icon" href="images/favicon.png">
   <link rel="apple-touch-icon" href="images/apple-touch-icon.png" sizes="180x180">
   <link rel="icon" type="image/png" href="images/android-touch-icon.png" sizes="192x192">
-  <!--
-  <link rel="stylesheet" type="text/css" href="css/slick.css">
-  <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
-  -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css">
-  <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-  <!--
-  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-  <script type="text/javascript" src="js/jquery.inview.min.js"></script>
-  <script type="text/javascript" src="js/slick.min.js"></script>
-  <script src="js/custom.js"></script>
-  -->
+  <link rel="stylesheet" type="text/css" href="css/design.css">
 </head>
 <body class="media">
   <div style="position: absolute; top: 0;" id="top"></div>
@@ -43,7 +33,7 @@
         
         </div>
         <ul class="navigation_list" style="height: 10%;">
-          <li><a href="#" class="navigation_link">プライバシーポリシー</a></li>
+          <li><a href="privacy_policy.html" class="navigation_link">プライバシーポリシー</a></li>
         </ul>
         <div style="width: 70%; height: 40%;">
           <div>
@@ -380,6 +370,6 @@
   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript" src="js/jquery.inview.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="js/custom.js"></script>
+  <script src="js/design.js"></script>
 </body>
 </html>
